Queen's Attack II (Functional solution)